--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #6366f1; /* indigo-500 */
       }
+
+      /* Tailwind animations config */
+      @keyframes fade-in {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      @keyframes fade-in-up {
+        from { opacity: 0; transform: translateY(20px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      @keyframes scale-in {
+        from { opacity: 0; transform: scale(0.9); }
+        to { opacity: 1; transform: scale(1); }
+      }
+      .animate-fade-in { animation: fade-in 0.3s ease-out; }
+      .animate-fade-in-up { animation: fade-in-up 0.4s ease-out; }
+      .animate-scale-in { animation: scale-in 0.3s ease-out; }
     </style>
   <script type="importmap">
 {
